--- a/upgrading/index.html
+++ b/upgrading/index.html
@@ -131,21 +131,15 @@
   >The new table/field names are only used if a new config value is in specified in the rundeck-config.properties file:</p
   ><pre
   ><code
-    >rundeck.v14.rdbsupport=true
+    >rundeck.v14.rdbsupport=false
 </code
     ></pre
   ><p
-  >This value is set by default on new installations, so if you have a previous 1.3 installation using the file-based datasource, upgrading to 1.4 should not cause any issues as the rundeck-config.properties file will not be modified when you upgrade.</p
+  >This value is set to false by default on new installations, so if you have a previous 1.3 installation using the file-based datasource, upgrading to 1.4 should not cause any issues.</p
   ><p
-  >The only potential conflict with this change is:</p
-  ><ul
-  ><li
-    >If you use the file-based data from 1.3 or earlier with a new 1.4 installation<ul
-      ><li
-	>if you do that, make sure to remove or change the config value to &quot;false&quot;</li
-	></ul
-      ></li
-    ></ul
+  >To configure a relational database backend, you must set this to &quot;true&quot;. See the section in the RunDeck Guide Administration chapter: <a href="../RunDeck-Guide.html#enable-rdbsupport"
+    >Enable rdbsupport</a
+    >.</p
   ></div
 ><div id="acl-policy-changes"
 ><h1
