--- a/upgrading/index.html
+++ b/upgrading/index.html
@@ -128,14 +128,18 @@
   ><p
   >To fix this, we have changed the table/field mappings to &quot;rduser&quot; and &quot;rdoption&quot; for the domain classes that used these names.</p
   ><p
-  >The new table/field names are only used if a new config value is in specified in the rundeck-config.properties file:</p
+  >The new table/field names are only used if a new config value is set to <code
+    >true</code
+    > in the rundeck-config.properties file:</p
   ><pre
   ><code
-    >rundeck.v14.rdbsupport=false
+    >rundeck.v14.rdbsupport=true
 </code
     ></pre
   ><p
-  >This value is set to false by default on new installations, so if you have a previous 1.3 installation using the file-based datasource, upgrading to 1.4 should not cause any issues.</p
+  >This value is set to <code
+    >false</code
+    > by default on new installations, so if you have a previous 1.3 installation using the file-based datasource, upgrading to 1.4 should not cause any issues.</p
   ><p
   >To configure a relational database backend, you must set this to &quot;true&quot;. See the section in the RunDeck Guide Administration chapter: <a href="../RunDeck-Guide.html#enable-rdbsupport"
     >Enable rdbsupport</a
