--- a/aclpolicy-v10.html
+++ b/aclpolicy-v10.html
@@ -481,6 +481,8 @@ for:
     - allow: [run,kill] # allow running/killing adhoc jobs
   job: 
     - allow: [create,read,update,delete,run,kill] # allow create/read/write/delete/run/kill of all jobs
+  node:
+    - allow: [read,run] # allow read/run for nodes
 by:
   group: admin
 
